<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso" />

        <EditText
            android:id="@+id/etPeso"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginBottom="20dp"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura" />

        <EditText
            android:id="@+id/etAltura"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginBottom="20dp"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imc" />

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoResultado" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/resultadoLabel" />

        <TextView
            android:id="@+id/tvResultadoDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zeros" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="80dp">

            <Button
                android:id="@+id/btCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/calcular"
                android:onClick="btCalcularOnClick"
                />

            <Button
                android:id="@+id/btLimpar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limpar" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
